// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SPageAlbumSingle Snapshot > renders with auth disabled and minimal album data correctly 1`] = `
"<div>
  <div class="bg-background sticky top-0 z-10 transition-all duration-300">
    <header class="bg-[var(--ui-bg)] py-2 sm:py-2">
      <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
        <!-- header top -->
        <div class="flex flex-col items-center justify-between sm:flex-row">
          <!-- image -->
          <div class="flex w-full items-start justify-between">
            <!--v-if-->
            <!-- name -->
            <div class="flex-grow">
              <h1 class="text-xl font-bold text-(--ui-primary) transition-all duration-300 sm:text-3xl">Minimal Album</h1><span class="text-xs"></span>
            </div>
          </div><!-- action buttons -->
          <div class="flex w-full flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">
            <!-- upvote button slot -->
            <!-- visit website button --><a href="https://serp.ly/@daftfm/amazon/music/unlimited" rel="noopener noreferrer" target="_blank" class="flex w-full items-center justify-center gap-2 rounded-full bg-black px-4 py-2 font-medium text-white transition-colors hover:bg-neutral-800 sm:w-auto dark:bg-white dark:text-black dark:hover:bg-neutral-200"> Listen Free <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                <polyline points="15 3 21 3 21 9"></polyline>
                <line x1="10" y1="14" x2="21" y2="3"></line>
              </svg></a>
          </div>
        </div><!-- header bottom (nav links) -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 border-t border-b whitespace-nowrap"><a href="#overview" class="sectionLinks text-muted-foreground flex-shrink-0 px-1 py-2 text-sm transition-colors duration-200 hover:text-(--ui-primary) sm:px-2 sm:text-base">Overview</a><a href="#songs" class="sectionLinks text-muted-foreground flex-shrink-0 px-1 py-2 text-sm transition-colors duration-200 hover:text-(--ui-primary) sm:px-2 sm:text-base">Songs</a></nav>
        </div>
      </div>
    </header>
  </div><!-- Main content with grid -->
  <div class="mx-auto max-w-7xl p-4 md:p-6 lg:p-8">
    <!-- Main Content (70) -->
    <div class="grid gap-6 lg:grid-cols-3">
      <div class="lg:col-span-2">
        <div>
          <!-- section: overview -->
          <div id="overview" class="scroll-mt-60">Minimal album overview.</div><!-- section: song list -->
          <section id="songs" class="mx-auto max-w-6xl scroll-mt-60 p-6"></section>
        </div>
      </div><!-- Sidebar (30%) -->
      <div class="space-y-6 lg:col-span-1">
        <!-- Album image --><img alt="Minimal Album cover art" data-nuxt-img="" srcset="undefined 1x, undefined 2x">
        <!--v-if-->
        <!-- Stats Section -->
        <div class="border p-4">
          <div>
            <div><span>Genres: </span></div><br>
            <!--v-if-->
          </div>
        </div><!-- Links Section -->
        <div class="border p-4">
          <div class="flex space-y-4">
            <div><a href="https://serp.ly/@daftfm/amazon/music/unlimited" rel="noopener noreferrer">Amazon Music</a></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SPageAlbumSingle Snapshot > renders with auth enabled and full album data correctly 1`] = `
"<div>
  <div class="bg-background sticky top-0 z-10 transition-all duration-300">
    <header class="bg-[var(--ui-bg)] py-2 sm:py-2">
      <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
        <!-- header top -->
        <div class="flex flex-col items-center justify-between sm:flex-row">
          <!-- image -->
          <div class="flex w-full items-start justify-between">
            <!--v-if-->
            <!-- name -->
            <div class="flex-grow">
              <h1 class="text-xl font-bold text-(--ui-primary) transition-all duration-300 sm:text-3xl">Test Album</h1><span class="text-xs"></span>
            </div>
          </div><!-- action buttons -->
          <div class="flex w-full flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">
            <!-- upvote button slot -->
            <!-- visit website button --><a href="https://serp.ly/@daftfm/amazon/music/unlimited" rel="noopener noreferrer" target="_blank" class="flex w-full items-center justify-center gap-2 rounded-full bg-black px-4 py-2 font-medium text-white transition-colors hover:bg-neutral-800 sm:w-auto dark:bg-white dark:text-black dark:hover:bg-neutral-200"> Listen Free <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                <polyline points="15 3 21 3 21 9"></polyline>
                <line x1="10" y1="14" x2="21" y2="3"></line>
              </svg></a>
          </div>
        </div><!-- header bottom (nav links) -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 border-t border-b whitespace-nowrap"><a href="#overview" class="sectionLinks text-muted-foreground flex-shrink-0 px-1 py-2 text-sm transition-colors duration-200 hover:text-(--ui-primary) sm:px-2 sm:text-base">Overview</a><a href="#songs" class="sectionLinks text-muted-foreground flex-shrink-0 px-1 py-2 text-sm transition-colors duration-200 hover:text-(--ui-primary) sm:px-2 sm:text-base">Songs</a></nav>
        </div>
      </div>
    </header>
  </div><!-- Main content with grid -->
  <div class="mx-auto max-w-7xl p-4 md:p-6 lg:p-8">
    <!-- Main Content (70) -->
    <div class="grid gap-6 lg:grid-cols-3">
      <div class="lg:col-span-2">
        <div>
          <!-- section: overview -->
          <div id="overview" class="scroll-mt-60">This is a test album overview.</div><!-- section: song list -->
          <section id="songs" class="mx-auto max-w-6xl scroll-mt-60 p-6">
            <div class="flex items-center justify-between">
              <div class="flex flex-1 items-center space-x-4"><span class="w-6">1</span><a href="/songs/song-one/">Song One</a></div>
              <div class="flex items-center"><span class="w-16 text-right"></span></div>
            </div>
            <div class="flex items-center justify-between">
              <div class="flex flex-1 items-center space-x-4"><span class="w-6">2</span><span>Song Two</span></div>
              <div class="flex items-center"><span class="w-16 text-right"></span></div>
            </div>
          </section>
        </div>
      </div><!-- Sidebar (30%) -->
      <div class="space-y-6 lg:col-span-1">
        <!-- Album image --><img alt="Test Album cover art" data-nuxt-img="" srcset="/_ipx/_/test-cover.jpg 1x, /_ipx/_/test-cover.jpg 2x" src="/_ipx/_/test-cover.jpg">
        <div class="border p-4">
          <ul class="list-disc pl-4">
            <li data-testid="release-date">Released: 2020-01-01</li>
          </ul>
        </div><!-- Stats Section -->
        <div class="border p-4">
          <div>
            <div><span>Genres: Rock, Pop</span></div><br>
            <div><span>Tags: Indie, Live</span></div>
          </div>
        </div><!-- Links Section -->
        <div class="border p-4">
          <div class="flex space-y-4">
            <div><a href="https://serp.ly/@daftfm/amazon/music/unlimited" rel="noopener noreferrer">Amazon Music</a></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SPageAlbumSingle Snapshot > renders with auth enabled and no recordings correctly 1`] = `
"<div>
  <div class="bg-background sticky top-0 z-10 transition-all duration-300">
    <header class="bg-[var(--ui-bg)] py-2 sm:py-2">
      <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
        <!-- header top -->
        <div class="flex flex-col items-center justify-between sm:flex-row">
          <!-- image -->
          <div class="flex w-full items-start justify-between">
            <!--v-if-->
            <!-- name -->
            <div class="flex-grow">
              <h1 class="text-xl font-bold text-(--ui-primary) transition-all duration-300 sm:text-3xl">No Songs Album</h1><span class="text-xs"></span>
            </div>
          </div><!-- action buttons -->
          <div class="flex w-full flex-col items-center justify-end gap-3 pt-4 sm:flex-row sm:pt-0">
            <!-- upvote button slot -->
            <!-- visit website button --><a href="https://serp.ly/@daftfm/amazon/music/unlimited" rel="noopener noreferrer" target="_blank" class="flex w-full items-center justify-center gap-2 rounded-full bg-black px-4 py-2 font-medium text-white transition-colors hover:bg-neutral-800 sm:w-auto dark:bg-white dark:text-black dark:hover:bg-neutral-200"> Listen Free <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                <polyline points="15 3 21 3 21 9"></polyline>
                <line x1="10" y1="14" x2="21" y2="3"></line>
              </svg></a>
          </div>
        </div><!-- header bottom (nav links) -->
        <div class="-mx-4 mt-4 overflow-x-auto px-4 sm:px-0">
          <nav aria-label="page sections" class="flex space-x-4 border-t border-b whitespace-nowrap"><a href="#overview" class="sectionLinks text-muted-foreground flex-shrink-0 px-1 py-2 text-sm transition-colors duration-200 hover:text-(--ui-primary) sm:px-2 sm:text-base">Overview</a><a href="#songs" class="sectionLinks text-muted-foreground flex-shrink-0 px-1 py-2 text-sm transition-colors duration-200 hover:text-(--ui-primary) sm:px-2 sm:text-base">Songs</a></nav>
        </div>
      </div>
    </header>
  </div><!-- Main content with grid -->
  <div class="mx-auto max-w-7xl p-4 md:p-6 lg:p-8">
    <!-- Main Content (70) -->
    <div class="grid gap-6 lg:grid-cols-3">
      <div class="lg:col-span-2">
        <div>
          <!-- section: overview -->
          <div id="overview" class="scroll-mt-60">Overview of album with no songs.</div><!-- section: song list -->
          <section id="songs" class="mx-auto max-w-6xl scroll-mt-60 p-6"></section>
        </div>
      </div><!-- Sidebar (30%) -->
      <div class="space-y-6 lg:col-span-1">
        <!-- Album image --><img alt="No Songs Album cover art" data-nuxt-img="" srcset="/_ipx/_/no-songs-cover.jpg 1x, /_ipx/_/no-songs-cover.jpg 2x" src="/_ipx/_/no-songs-cover.jpg">
        <div class="border p-4">
          <ul class="list-disc pl-4">
            <li data-testid="release-date">Released: 2021-06-15</li>
          </ul>
        </div><!-- Stats Section -->
        <div class="border p-4">
          <div>
            <div><span>Genres: Jazz</span></div><br>
            <div><span>Tags: Smooth</span></div>
          </div>
        </div><!-- Links Section -->
        <div class="border p-4">
          <div class="flex space-y-4">
            <div><a href="https://serp.ly/@daftfm/amazon/music/unlimited" rel="noopener noreferrer">Amazon Music</a></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
